# LLMinator

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  config.ini  core.py  llm.py  main.py  models.py  modelsui.py  requirements.txt  style.css  webui.py
configs/: config.ini
example/: index.html
models/: models.txt
src/: quantize.py
